src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <displayFormat>A-{00000000}</displayFormat>
        <inlineHelpText>System generated ID for activities</inlineHelpText>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Activity_Sub_Type__c</fullName>
        <label>Purpose</label>
        <picklist>
            <controllingField>Activity_Type_std__c</controllingField>
            <picklistValues>
                <fullName>Book Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyse Customer Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Codes/ EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event / Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up operation start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer relation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Launching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Task__c</fullName>
        <label>Activity Task</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up 1-1-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Creations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type_std__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Physical Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up 1-1-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepare Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain Customer Master Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger &amp; reorganisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain Postbox Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Specifics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pickup &amp; Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Do</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_team__c</fullName>
        <label>Activity team</label>
        <picklist>
            <picklistValues>
                <fullName>Team 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caller_Disposition__c</fullName>
        <label>Caller Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Angry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>IF(ISBLANK(Text($User.Team__c)),$UserRole.Name,Text($User.Team__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_meeting_survey_block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer meeting survey block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_decision_of_investigation__c</fullName>
        <label>Date of decision of investigation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_incoming_item__c</fullName>
        <label>Date of incoming item</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drop_off_date__c</fullName>
        <label>Drop off date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FO_Sales_group__c</fullName>
        <label>FO / Sales group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_info__c</fullName>
        <inlineHelpText>This field will not be included in the meeting invitation.</inlineHelpText>
        <label>Internal info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Investigation__c</fullName>
        <label>New Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_call_list_date__c</fullName>
        <defaultValue>Today() + 1</defaultValue>
        <label>New call list date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Activity_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Activity ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_area__c</fullName>
        <label>Sales area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telesales_flag_trigger__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Telesales flag trigger</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_Damage__c</fullName>
        <label>Transport Damage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallDuration__c</fullName>
        <formula>IF(FLOOR(CallDurationInSeconds/3600)&lt;100,
 LPAD(TEXT(FLOOR(CallDurationInSeconds/3600)),2,&apos;0&apos;),
 TEXT(FLOOR(CallDurationInSeconds/3600))) &amp; &apos;:&apos; &amp;
LPAD(TEXT(FLOOR((CallDurationInSeconds-3600*FLOOR(CallDurationInSeconds/3600))/60)), 2, &apos;0&apos;) &amp; &apos;:&apos; &amp;
LPAD(TEXT(MOD(CallDurationInSeconds, 60)), 2, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actimizer Call Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallGuid__c</fullName>
        <externalId>true</externalId>
        <label>Actimizer Call ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallTime__c</fullName>
        <description>Time for call if this activity is an Actimizer generated activity.</description>
        <label>Actimizer Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerRedialPhoneNumber__c</fullName>
        <label>Actimizer Redial Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerRedialTime__c</fullName>
        <label>Actimizer Redial Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Actimizer_Call_Record__c</fullName>
        <formula>IF(CallDurationInSeconds = 0 || 
BLANKVALUE($Setup.actimizerdialer__ActimizerDialerSettings__c.actimizerdialer__CallRecordingRetentionPeriod__c, 0) = 0 ||  $Setup.actimizerdialer__ActimizerDialerSettings__c.actimizerdialer__CallRecordingRetentionPeriod__c + DATEVALUE(actimizerdialer__ActimizerCallTime__c) &lt; TODAY(), &quot;N/A&quot;,  HYPERLINK(&quot;https://sf.actimizer.com/v1.4/force/authenticate?apexpage=https%3A%2F%2Fsf.actimizer.com%2Fv1.4%2Frecordedcall%2Fdownload%3FcallGuid%3D&quot; &amp; actimizerdialer__ActimizerCallGuid__c, &quot;Download&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actimizer Call Record</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Assigned_to_System_Account_Owner</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Category__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.RECORDTYPE</columns>
        <columns>Activity_Type_std__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Call|Email New Lead</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>smark</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Assigned to: Owner, System Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DEM_Last_Mile</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso,pmb</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK Last Mile Team</value>
        </filters>
        <label>DEM - Last Mile</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PN_DK_Last_Mile_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_Last_Mile_Team_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEM_Media</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK Media Team</value>
        </filters>
        <label>DEM - Media</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PN_DK_Media_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_Media_Team_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEM_Public</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>PN DK Public Team</value>
        </filters>
        <label>DEM - Public</label>
        <language>en_US</language>
        <sharedTo>
            <role>PN_DK_Public_Team</role>
            <role>PN_DK_Public_Team_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEM_Retail</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK Retail Team</value>
        </filters>
        <label>DEM - Retail</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PN_DK_Retail_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_Retail_Team_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERS_SME_OST</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso,mstor</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK SMA MidMarket</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK SMA Sales East</value>
        </filters>
        <label>ERS-SME Team Indbakke Øst 1-4</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PDK_BE_SMA_Telesales_CPH_Team</roleAndSubordinates>
            <roleAndSubordinates>PDK_BE_SMA_Telesales_CPH_Team_Manager</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_3_CPH_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_3_CPH_Team_Manager</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_4_CPH_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_4_CPH_Team_Manager</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_Small_Medium_Accounts</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERS_SME_Vest</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso,mstor</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK SMA Sales west</value>
        </filters>
        <label>ERS-SME Team Indbakke Vest 5-9</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PDK_BE_SMA_Telesales_AAH_Team</roleAndSubordinates>
            <roleAndSubordinates>PDK_BE_SMA_Telesales_AAH_Team_Manager</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_1_AAH_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_1_AAH_Team_Manager</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_2_KOL_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_SMA_Team_2_KOL_Team_Manager</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_Small_Medium_Accounts</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Frim_rker_Luk_kundeaftale</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>snobe</value>
        </filters>
        <label>Frimærker - Luk kundeaftale</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PN_DK_KUL_Kundeservice_Private</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IME_E_Business</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK e-Business Team</value>
        </filters>
        <label>IME - E-Business</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>PN_DK_e_Business_Team</roleAndSubordinates>
            <roleAndSubordinates>PN_DK_e_Business_Team_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IME_Export</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pmb,ep1,c0g,ilc,rme,dm4,pk2,bnr,saa,rso</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Luk</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>PN DK Export Team</value>
        </filters>
        <label>IME - Export</label>
        <language>en_US</language>
        <sharedTo>
            <role>PN_DK_Export_Team</role>
            <role>PN_DK_Export_Team_Manager</role>
        </sharedTo>
    </listViews>
</CustomObject>